<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_controls">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="soundsOn"
            android:summary="@string/settings_sounds_summary"
            android:title="@string/settings_sounds_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="vibrationOn"
            android:summary="@string/settings_vibration_summary"
            android:title="@string/settings_vibration_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkpointVibrationOn"
            android:summary="@string/settings_checkpoint_vibration_summary"
            android:title="@string/settings_checkpoint_vibration_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hardControlOn"
            android:summary="@string/settings_hard_summary"
            android:title="@string/settings_hard_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_display">
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/themeSelection"
            android:entryValues="@array/themeSelectionData"
            android:key="theme"
            android:title="@string/settings_theme" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="keepScreenOn"
            android:summary="@string/settings_keep_on_summary"
            android:title="@string/settings_keep_on_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showIncrement"
            android:summary="@string/settings_show_increment_summary"
            android:title="@string/settings_show_increment_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showDecrement"
            android:summary="@string/settings_show_decrement_summary"
            android:title="@string/settings_show_decrement_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_widget">

        <Preference
            android:key="openWidgetSettings"
            android:title="@string/settings_widget_title" />


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="soundsOn"
            android:summary="@string/settings_widget_sounds_summary"
            android:title="@string/settings_widget_sounds_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="vibrationOn"
            android:summary="@string/settings_widget_vibration_summary"
            android:title="@string/settings_widget_vibration_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="vibrationOn"
            android:summary="@string/settings_widget_checkpoint_vibration_summary"
            android:title="@string/settings_widget_checkpoint_vibration_title" />

        <EditTextPreference
            android:defaultValue="50"
            android:dialogTitle="dialogTitle"
            android:inputType="number"
            android:key="widgetScreenPercentage"
            android:selectAllOnFocus="true"
            android:summary="@string/settings_widget_screen_percentage_summary"
            android:title="@string/settings_widget_screen_percentage_title" />

        <EditTextPreference
            android:defaultValue="50"
            android:dialogTitle="dialogTitle"
            android:inputType="number"
            android:key="widgetTransparency"
            android:selectAllOnFocus="true"
            android:summary="@string/settings_widget_transparency_summary"
            android:title="@string/settings_widget_transparency_title" />

        <!--// todo: add widget front color-->
        <!--// todo: add widget back color-->
        <!--// todo: show fixed widget demo view while editing widget parameters -->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_checkpoint">

        <EditTextPreference
            android:defaultValue="100"
            android:dialogTitle="dialogTitle"
            android:inputType="number"
            android:key="checkpointValue"
            android:selectAllOnFocus="true"
            android:summary="@string/settings_checkpoint_value_summary"
            android:title="@string/settings_checkpoint_value_title" />

        <EditTextPreference
            android:defaultValue="30"
            android:dialogTitle="dialogTitle"
            android:inputType="number"
            android:key="vibrationTime"
            android:selectAllOnFocus="true"
            android:summary="@string/settings_vibration_time_summary"
            android:title="@string/settings_vibration_time_title" />

        <EditTextPreference
            android:defaultValue="90"
            android:dialogTitle="dialogTitle"
            android:inputType="number"
            android:key="checkpointVibrationTime"
            android:selectAllOnFocus="true"
            android:summary="@string/settings_checkpoint_vibration_time_title"
            android:title="@string/settings_checkpoint_vibration_time_summary" />

    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/settings_vibration"></PreferenceCategory>-->

    <PreferenceCategory android:title="@string/settings_custom">

        <!--
        //todo: Hidden checkboxes: choose what to hide
        //todo: default background tap action (+ or -)
        //todo: default counter initial value
        //todo: add counter initial value (reverse counting)
        -->

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/backgroundTapActionSelection"
            android:entryValues="@array/backgroundTapActionSelectionData"
            android:key="backgroundTapAction"
            android:title="@string/settings_background_tap_title" />

        <!--<CheckBoxPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="backgroundTapIncrement"-->
        <!--android:summary="@string/settings_background_increment_summary"-->
        <!--android:title="@string/settings_background_increment_title"-->
        <!--android:visibility="invisible"-->
        <!--/>-->

        <EditTextPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_count_amount_summary"
            android:inputType="number"
            android:key="countAmount"
            android:selectAllOnFocus="true"
            android:summary="@string/settings_count_amount_summary"
            android:title="@string/settings_count_amount_title" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_other">
        <Preference
            android:key="removeCounters"
            android:title="@string/settings_wipe_title" />
        <Preference
            android:key="restoreDefaultSettings"
            android:title="@string/settings_restore_defaults_title" />

        <Preference
            android:enabled="false"
            android:key="version"
            android:summary="@string/unknown"
            android:title="@string/settings_version_title" />
    </PreferenceCategory>

</PreferenceScreen>
